--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.3",
-    "hardhat": "^2.14.0"
+    "hardhat": "^2.14.0",
+    "truffle": "^5.8.4"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2"
   }
 }
